--- a/style/main.css
+++ b/style/main.css
@@ -3,14 +3,15 @@
 html, body {
   margin: 0;
   padding: 0;
-  background: #9cc2d2;
-  color: #354b59;
+  background: url('../tile-sets/olga/nya.jpg'); 
+  background-size: 180%;
+  color:  #4B3535;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-family: "Whitney SSm A","Whitney SSm B","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 18px; }
 
 body {
-  margin: 80px 0; }
+  margin: 40px 0; }
 
 p.learn {
   margin-top: 20px;
@@ -24,7 +25,7 @@ span.tile-text {
 
 input {
   display: inline-block;
-  background: #8f7a66;
+  background:   #D8BFD8;
   border-radius: 3px;
   padding: 0 20px;
   text-decoration: none;
@@ -97,7 +98,7 @@ h1.title {
 .score-container, .best-container {
   position: relative;
   display: inline-block;
-  background: #0c92bf;
+  background: #FF4500;
   padding: 15px 25px;
   font-size: 25px;
   height: 25px;
@@ -116,7 +117,7 @@ h1.title {
     font-size: 13px;
     line-height: 13px;
     text-align: center;
-    color: #eee4da; }
+    color: ; }
   .score-container .score-addition, .best-container .score-addition {
     position: absolute;
     right: 30px;
@@ -148,6 +149,7 @@ a {
   font-weight: medium;
   text-decoration: underline;
   cursor: pointer; }
+
 
 strong.important {
   text-transform: uppercase; }
@@ -210,7 +212,7 @@ hr {
   -ms-user-select: none;
   -ms-touch-action: none;
   touch-action: none;
-  background: #1e6477;
+  background: #FF8247;
   border-radius: 6px;
   width: 500px;
   height: 500px;
@@ -258,7 +260,7 @@ hr {
     border-radius: 3px;
     padding: 0 20px;
     text-decoration: none;
-    color: #f9f6f2;
+    color: #f9f6f;
     height: 40px;
     line-height: 42px;
     cursor: pointer;
@@ -304,13 +306,13 @@ hr {
     display: block;
     clear: both; }
 
-.grid-cell {
+.grid-cell { 
   width: 106.25px;
   height: 106.25px;
   margin-right: 15px;
   float: left;
   border-radius: 3px;
-  background: rgba(238, 228, 218, 0.35); }
+  background: rgba(0, 0, 128, 0.75); }
   .grid-cell:last-child {
     margin-right: 0; }
 
@@ -403,83 +405,90 @@ hr {
     z-index: 10;
     font-family: 'Source Code Pro', Courier;
     font-size: 16px; 
-    color: #354b59;}
+    color: #4B3535;}
   .tile.tile-2 .tile-inner {
-    background: url('../tile-sets/udacity/2.png');
-    background-size: 100%;
+    background: url('../tile-sets/olga/2.png');
+    background-size:125%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
-    background: url('../tile-sets/udacity/4.png');
+    background: url('../tile-sets/olga/4.png');
     background-size: 100%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
-    background: url('../tile-sets/udacity/8.png');
+    background: url('../tile-sets/olga/8.png');
     background-size: 100%;
     color: rgba(0,0,0,0);
     font-weight: medium;
     font-size: 11px;
   }
   .tile.tile-16 .tile-inner {
-    background: url('../tile-sets/udacity/16.png');
+    background: url('../tile-sets/olga/16.png');
     background-size: 100%;
     color: rgba(0,0,0,0);
     font-weight: medium;
     font-size: 10px;
   }
   .tile.tile-32 .tile-inner {
-    background: url('../tile-sets/udacity/32.png');
-    background-size: 100%;
+    background: url('../tile-sets/olga/32.png');
+    background-size: 135%;
     color: rgba(0,0,0,0);
     font-size: 14px;
   }
   .tile.tile-64 .tile-inner {
-    background: url('../tile-sets/udacity/64.png');
-    background-size: 100%;
+    background: url('../tile-sets/olga/64.png');
+    background-size: 150%;
     color: rgba(0,0,0,0);
     font-size: 14px;
 
   }
   .tile.tile-128 .tile-inner {
     font-weight: medium;
-    background: url('../tile-sets/udacity/128.png');
+    background: url('../tile-sets/olga/128.png');
     background-size: 100%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 12px; }
+
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
         font-size: 12px; } }
+
   .tile.tile-256 .tile-inner {
-    background: url('../tile-sets/udacity/256.png');
+    background: url('../tile-sets/olga/256.png');
     background-size: 100%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 14px; }
+
     @media screen and (max-width: 520px) {
       .tile.tile-256 .tile-inner {
         font-size: 16px; } }
+
   .tile.tile-512 .tile-inner {
-    background: url('../tile-sets/udacity/512.png');
-    background-size: 100%;
+    background: url('../tile-sets/olga/512.png');
+    background-size: 125%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 13px; }
+
     @media screen and (max-width: 520px) {
       .tile.tile-512 .tile-inner {
         font-size: 13px; } }
   .tile.tile-1024 .tile-inner {
-    background: url('../tile-sets/udacity/1024.png');
-    background-size: 100%;
+    background: url('../tile-sets/olga/1024.png');
+    background-size: 160%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 10px; }
+
     @media screen and (max-width: 520px) {
       .tile.tile-1024 .tile-inner {
         font-size: 10px; } }
+
   .tile.tile-2048 .tile-inner {
-    background: url('../tile-sets/udacity/2048.png');
+    background: url('../tile-sets/olga/2048.png');
     background-size: 100%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
@@ -716,7 +725,7 @@ hr {
       border-radius: 3px;
       padding: 0 20px;
       text-decoration: none;
-      color: #f9f6f2;
+      color: #f9f;
       height: 40px;
       line-height: 42px;
       cursor: pointer;
